# traderecon-ai-agent

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: tests.yml
agents/: __init__.py  audit.py  data_ingestion.py  guardrail.py  reconciliation.py
config/: recipients.yaml  settings.yaml  tolerance.yaml
data/samples/: reference_data.csv  source_a_trades.csv  source_b_trades.csv
data/schemas/: trade_schema.json
db/: schema.sql
docs/: ARCHITECTURE.md  SECURITY.md  SETUP.md
scripts/: generate_sample_data.py  run_pipeline.py  setup_db.py
tests/unit/: test_phase0_setup.py  test_phase1_ingestion.py  test_phase2_reconciliation.py
tools/: __init__.py  data_loader.py  reconciliation_engine.py  schemas.py  state_store.py
